# student-management-system-kimi

./: .env  .env.example  .flake8  manage.py  pyproject.toml  requirements-dev.txt
scripts/: check.ps1  format.ps1  lint.ps1  run-dev.ps1  setup.ps1  test.ps1
student_management_app/tests/: test_models.py  test_settings.py  test_views.py
student_management_system/: asgi.py  urls.py  wsgi.py
student_management_system/settings/: __init__.py  base.py  dev.py  prod.py
